when condi 28Apr2022_064401

--- a/extravars.properties
+++ b/extravars.properties
@@ -1,3 +1,47 @@
 Username=mohanbabu
 PushDrContainers=true
 api_imagetag=latest
+sso_imagetag=latest
+iav_imagetag=latest
+ontrac_imagetag=latest
+ebill_imagetag=latest
+recipient_imagetag=latest
+environment=prod
+nbr_api_ec2=1
+nbr_ui_ec2=1
+update_sso=yes
+update_api=yes
+update_iav=yes
+update_ontrac=yes
+update_ebill=yes
+update_recipient=yes
+tfbranch=hello
+cybersource_loopback=true
+dc_dcu_loopback=false
+dc_dna_3rivers_loopback=false
+dc_dna_meritrust_loopback=false
+dc_cocc_reading_loopback=false
+dc_mahalo_profed_loopback=false
+dc_episys_coastal_loopback=false
+dc_episys_dover_loopback=false
+dc_episys_publix_loopback=false
+dc_episys_unitus_loopback=false
+dc_finxact_primis_loopback=false
+dc_q2_mercantile_loopback=false
+rce_worker_loopback=false
+venmo_loopback=false
+bpx_loopback=false
+dc_cocc_libertybank_loopback=false
+dc_xp2_nusenda_loopback=false
+dc_episys_wrightpatt_loopback=false
+dc_episys_eecu_loopback=flase
+dc_q2_firstnorthernbank_loopback=false
+dc_q2_5star_loopback=false
+dc_finxact_glorifi_loopback=false
+dc_keystone_cenwill_loopback=false
+dc_episys_hudsonvalley_loopback=false
+dc_episys_kinecta_loopback=false
+dc_episys_georgiaunited_loopback=false
+dc_q2_chesapeakebank_loopback=false
+should_roll=true
+
