when condi 13May2022_071816

--- a/AppServiceVersion.yml
+++ b/AppServiceVersion.yml
@@ -4,9 +4,7 @@
         "Environments": [
                  {
                         "Environment": "dev1",
-                         "services": [
-				   {"httpq":"1.9","appmgr":"jenkin-69"}
-                                     ]
+                         "services": [{"httpq":"1.9","appmgr":"jenkin-69"}]
                  }
 
                          ]
