--- a/service.yml
+++ b/service.yml
@@ -13,3 +13,17 @@ prod:
   <<: *sprint6
 imp1: 
   <<: *sprint7
+dev1:
+  <<: *sprint6
+dev2:
+  <<: *sprint6
+dev3:
+  <<: *sprint6
+perf:
+  <<: *sprint7
+qa2:
+  <<: *sprint7
+uat1:
+  <<: *sprint6
+conv:
+  <<: *sprint6
