--- a/mybatisddl.yml
+++ b/mybatisddl.yml
@@ -1,11 +1,13 @@
 sprint6: &sprint6
   - command: up
-  - dbnodes: [db001,db002,db003]
+  - dblist: [db001,db002,db003]
 sprint7: &sprint7
   - command: pending
+  - dblist: [db001,db002,db003]
   - dbnodes: [db001,db002,db003]
 sprint8: &sprint8
   - command: status
+  - dblist: [db001,db002,db003]
   - dbnodes: [db001,db002,db003]
 
 qa1: 
