--- a/serviceskeyval.yml
+++ b/serviceskeyval.yml
@@ -1,9 +1,10 @@
 sprint6: &sprint6
-  - applist: [{appname: 'httpq', version: 'package-release-2.2.5.0-212'}]
+  - applist: [{appname: 'httpq', version: 'package-release-2.2.5.0-300'}, {appname: 'webhook003', version: 'jenkins-300'}, {appname: 'apimgr', version: 'jenkins-300'}]
   - httpq: package-release-2.2.5.0-212
   - webhook003: jenkins-55
   - apimgr: jenkins-222
 sprint7: &sprint7
+  - applist: [{appname: 'httpq', version: 'package-release-2.2.5.0-400'}, {appname: 'webhook003', version: 'jenkins-400'}, {appname: 'apimgr', version: 'jenkins-400'}]
   - httpq: package-release-2.2.7.0-212
   - webhook003: jenkins-55
   - apimgr: jenkins-222
