--- a/mybatisddl.yml
+++ b/mybatisddl.yml
@@ -1,7 +1,7 @@
 sprint6: &sprint6
   - command: up
   - dbnode: [db001,db002,db003,db999]
-  - dblist: [dbreplicate,dbtemp,rce,svcq_db000,svcq_db000_b]
+  - dblist: [dbreplicate,dbtemp,rce,svcq_db000,svcq_db000_b,dbx00]
 sprint7: &sprint7
   - command: pending
   - dbnode: [db001,db002,db003,db999]
