--- a/mybatisddl.yml
+++ b/mybatisddl.yml
@@ -5,7 +5,7 @@ sprint6: &sprint6
 sprint7: &sprint7
   - command: pending
   - dbnode: [db001,db002,db003,db999]
-  - dblist: [zextq_dc_mahalo_profed,zextq_dc_portico_trailnorth,zextq_dc_q2_5star,zextq_dc_q2_advia,zextq]
+  - dblist: [dbreplicate,zextq_dc_mahalo_profed,zextq_dc_q2_advia,zextq]
 sprint8: &sprint8
   - command: status
   - dbnode: [db001,db002,db003,db999]
