--- a/serviceskeyval.yml
+++ b/serviceskeyval.yml
@@ -4,7 +4,7 @@ sprint6: &sprint6
   - webhook003: jenkins-55
   - apimgr: jenkins-222
 sprint7: &sprint7
-  - applist: [{appname: 'httpq', version: 'package-release-2.2.5.0-400'}, {appname: 'webhook003', version: 'jenkins-400'}, {appname: 'apimgr', version: 'jenkins-400'}]
+  - applist: [{appname: 'httpq', version: 'package-release-2.2.5.0-400'}, {appname: 'webhook003', version: 'jenkins-400'}, {appname: 'apimgr', version: 'jenkins-400'}, {appname: 'apache', version: '2.2.5'}]
   - httpq: package-release-2.2.7.0-212
   - webhook003: jenkins-55
   - apimgr: jenkins-222
